--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,9 +11,53 @@ permissions:
   packages: read
 
 jobs:
+  fetch:
+    name: Fetch dependencies and cache
+    runs-on: ubuntu-latest
+
+    env:
+      CARGO_TERM_COLOR: always
+    
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Install dev libraries
+        shell: bash
+        run: |
+          sudo apt-get install -y libpq-dev libpq5 libsqlite3-dev libsqlite3-0
+
+      - name: Setup Rust
+        uses: actions-rust-lang/setup-rust-toolchain@v1
+        with:
+          toolchain: stable
+          rustflags: ""
+
+      - name: Install cargo-binstall
+        uses: cargo-bins/cargo-binstall@main
+
+      - name: Install cargo-make
+        shell: bash
+        run: | 
+          cargo binstall cargo-make --force
+
+      - name: Fetch dependencies
+        shell: bash
+        run: |
+          cargo fetch --locked --verbose
+
+      - name: Run cargo check
+        shell: bash
+        run: |
+          cargo check --workspace
+
   test:
     name: Test project
     runs-on: ubuntu-latest
+    needs:
+      - fetch
 
     env:
       CARGO_TERM_COLOR: always
@@ -52,7 +96,7 @@ jobs:
     name: Build project
     runs-on: ubuntu-latest
     needs:
-      test
+      fetch
 
     env:
       CARGO_TERM_COLOR: always
