--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ diesel = { version = "2.2.7", features = [
 diesel_migrations = { version = "2.2.0", features = ["postgres", "sqlite"] }
 dom_query = "0.13.1"
 dotenvy = "0.15.7"
+git-version = "0.3.9"
 image = "0.25.5"
 ipld-core = "0.4.2"
 libsqlite3-sys = { version = "0.31.0", features = ["bundled"] }
@@ -63,6 +64,7 @@ snmalloc-rs = { version = "0.3.8" }
 thiserror = "2.0.12"
 tikv-jemallocator = { version = "0.6.0" }
 tokio = { version = "1.42.0", features = ["full"] }
+toml_edit = "0.22.24"
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 uuid = { version = "1.15.1", features = ["fast-rng", "v4", "v7"] }
