--- a/fediproto-sync-build-macros/Cargo.toml
+++ b/fediproto-sync-build-macros/Cargo.toml
@@ -9,5 +9,5 @@ repository.workspace = true
 license-file.workspace = true
 
 [dependencies]
-git-version = "0.3.9"
-toml_edit = "0.22.24"
+git-version = { workspace = true }
+toml_edit = { workspace = true }
