Use Clap for CLI handling (#22)
Add clap

Add openssl to fediproto-sync package

Add clap to lib package

Update CLI and config handling

- Implements the usage of clap.
- Removes the old handler for the CLI.
- Removes loading the config with the `::new()` function.
- Add generic functions for decoding Base64 encoded private/public keys.
- Remove `From` and `FromStr` for `FediProtoSyncMode`.
- Remove `From` and `FromStr` for `DatabaseType`.

Implement the new CLI handling in the entrypoint

- Also split up into `main.rs` and `lib.rs`.

Update container CMD

Reviewed-on: https://git.smalls.online/smalls/fediproto-sync/pulls/22

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ axum = { version = "0.8.3", features = ["macros"] }
 axum-extra = { version = "0.10.1", features = ["typed-header"] }
 bytes = "1.10.1"
 chrono = { version = "0.4.41", features = ["serde"] }
+clap = { version = "4.5.43", features = ["derive", "env"]}
 diesel = { version = "2.2.12", features = [
     "32-column-tables",
     "chrono",
