--- a/fediproto-sync-lib/Cargo.toml
+++ b/fediproto-sync-lib/Cargo.toml
@@ -9,6 +9,7 @@ repository.workspace = true
 license-file.workspace = true
 
 [dependencies]
+clap = { workspace = true }
 rand = { workspace = true }
 thiserror = { workspace = true }
 
