--- a/fediproto-sync/Cargo.toml
+++ b/fediproto-sync/Cargo.toml
@@ -16,6 +16,7 @@ atrium-api = { workspace = true }
 atrium-xrpc-client = { workspace = true }
 bytes = { workspace = true }
 chrono = { workspace = true }
+clap = { workspace = true }
 diesel = { workspace = true }
 dom_query = { workspace = true }
 dotenvy = { workspace = true }
@@ -33,6 +34,15 @@ serde_json = { workspace = true }
 tokio = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
+
+[target.'cfg(target_os = "linux")'.dependencies]
+openssl = { workspace = true }
+
+[target.'cfg(target_os = "macos")'.dependencies]
+openssl = { workspace = true, features = ["vendored"] }
+
+[target.'cfg(target_os = "windows")'.dependencies]
+openssl = { workspace = true, features = ["vendored"] }
 
 [target.'cfg(all(target_family = "unix", not(target_os = "macos")))'.dependencies]
 tikv-jemallocator = { workspace = true }
