--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,7 +56,7 @@ rand = "0.9.2"
 regex = { version = "1.11.1", features = ["std"] }
 reqwest = { version = "0.13.0", features = [
     "json",
-    "rustls-tls",
+    "rustls",
 ], default-features = false }
 rstest = "0.26.0"
 serde = { version = "1.0.219", features = ["derive"] }
